kubernetes-demo.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubernetes-demo-pod
  labels:
    app: demoApp
spec:
  containers:
    - name: kubernetes-demo-container
      image: badguy361/nodejs_practice
      ports:
        - containerPort: 3000
