ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
spec:
  rules:
    - host: blue.demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blue-service
                port: 
                  number: 80
    - host: purple.demo.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: purple-service
                port: 
                  number: 80
